# basemesh

./: .gitignore  AGENTS.md  OVERVIEW.md  README.md  config.example.yaml  llms.txt  pyproject.toml
src/basemesh/: __init__.py  chunker.py  cli.py  client.py  config.py  constants.py  crypto.py  gateway.py  http_api.py  mesh.py  protocol.py  rate_limiter.py  store.py  wallet.py
tests/: conftest.py  mock_mesh.py  test_chunker.py  test_cli.py  test_client.py  test_crypto.py  test_deferred.py  test_gateway.py  test_http_api.py  test_protocol.py  test_rate_limiter.py  test_store.py  test_wallet.py
